--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>be.milieuinfo</groupId>
-        <artifactId>acd-parent</artifactId>
-        <version>1.0.9</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>be.milieuinfo</groupId>
+    <artifactId>acd-parent</artifactId>
+    <version>1.0.9</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>be.vlaanderen.omgeving.maven.archetype</groupId>
-    <artifactId>codelijst-archetype</artifactId>
-    <version>0.3.2-SNAPSHOT</version>
-    <packaging>maven-archetype</packaging>
-    <name>codelijst-archetype</name>
-    <description>Maven archetype voor het oopzetten van een nieuw codelijst project</description>
+  <groupId>be.vlaanderen.dov.data.id.graph</groupId>
+  <artifactId>codelijst-bemonsteringstype</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
-    <scm>
-        <connection>scm:git:https://github.com/milieuinfo/codelijst-archetype.git</connection>
-        <developerConnection>scm:git:https://github.com/milieuinfo/codelijst-archetype.git</developerConnection>
-        <url>https://github.com/milieuinfo/codelijst-archetype.git</url>
-        <tag>${bamboo.SVN</tag>
-    </scm>
+  <name>codelijst-bemonsteringstype</name> <!-- e.g. codelijst-testrepo -->
 
-    <build>
-      <extensions>
-        <extension>
-          <groupId>org.apache.maven.archetype</groupId>
-          <artifactId>archetype-packaging</artifactId>
-          <version>3.1.1</version>
-        </extension>
-      </extensions>
-   </build>
+
+  <scm>
+        <connection>scm:git:https://github.com/DOV-Vlaanderen/codelijst-bemonsteringstype.git</connection>
+        <developerConnection>scm:git:https://github.com/DOV-Vlaanderen/codelijst-bemonsteringstype.git</developerConnection>
+        <url>https://github.com/DOV-Vlaanderen/codelijst-bemonsteringstype.git</url>
+  </scm>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>1</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>codelijst</classifier>
+              <includes>
+                <include>**/id/conceptscheme/*</include>
+              </includes>
+            </configuration>
+          </execution>
+          <execution>
+            <id>2</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>metadata</classifier>
+              <includes>
+                <include>**/id/dataset/*</include>
+                <include>**/id/catalog/*</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <id>attach-sources-override</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+     </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
+  </build>
 </project>
