--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -76,7 +76,7 @@ plan-permissions:
       - bamboo-admin
       - bamboo-release
       - developer-admin
-      - dov-developers
+      - dov-admin
     permissions:
       - view
       - edit
