--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>codelijst-bemonsteringstype</name> <!-- e.g. codelijst-testrepo -->
+  <name>codelijst-bemonsteringstype</name>
 
 
   <scm>
